--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
   "require": {
-    "mobiledetect/mobiledetectlib": "2.8.19"
+    "mobiledetect/mobiledetectlib": "2.8.19",
+    "psr/http-message": "1.0",
+    "zendframework/zend-diactoros": "1.3.3"
   }
 }
